css/styles.css
/* ... */
.main-carousel{
    width: 80%;
}

/* smaller, dark, rounded square */
.flickity-button {
    background: var(--highlightGrad) !important;
    transition: all .15s ease-in-out;
}
.flickity-button:hover {
    background: rgb(94, 94, 173) !important;
}
  
.flickity-prev-next-button {
    width: 40px !important;
    height: 40px !important;
    border-radius: 10px !important;
}
/* icon color */
.flickity-button-icon {
    fill: white !important;
}

/* position dots up a bit */
.flickity-page-dots {
    bottom: -22px !important;
    transition: all .15s ease-in-out !important;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
  }
  /* dots are lines */
  .flickity-page-dots .dot {
    height: 7px !important;
    width: 40px !important;
    margin: 0 !important;
    border-radius: 2px !important;
    transition: all .15s ease-in-out;
    background-color: var(--highlightGrad) !important;
  }

.itemWrapper{
    width: 50%;
    height: 500px;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 25px;
    overflow: hidden;
    box-sizing: border-box;
    border: 1px solid var(--tamnoPlavaBack);
    transition: filter .2s ease-in-out, border .2s ease-in-out, height .3s ease-in-out, background-color .2s ease-in-out;
    margin: 5px;
    filter: blur(2px) brightness(0.5);
    background-color: rgba(146, 135, 214, 0.15);
}

.carousel-cell.is-selected {
    height: 550px !important;
    filter: blur(0px) brightness(1);
    border: 2px solid var(--tamnoPlavaBack);
    background-color: rgba(255, 255, 255, 0);
}

.bannerImg{
    width: 100%;
    height: 350px;
    object-fit: cover;
    border-top-right-radius: 20px;
    border-top-left-radius: 20px;
}

.itemText{
    position: relative;
    display: flex;
    align-items: center;
    flex-direction: column;
    width: calc(100% - 30px);
    padding-inline: 15px;
    height: 200px;
}

.itemText h1{
    margin: 10px;
    margin-top: 10px;
    color: var(--textWhite);
    font-weight: 600;
    text-align: left;
    width: 100%;
    min-width: 100%;
}

.itemText p{
    width: 100%;
    margin: 0px;
    color: var(--descColor);
    text-align: left;
}

.projectType{
    background: var(--highlightGrad);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    position: absolute;
    bottom: 17px;
    left: 17px;
    font-size: 13px;
}

.button{
    background: var(--highlightGrad);
    border: none;
    border-radius: 15px;
    font-size: 17px;
    padding-block: 5px;
    padding-inline: 15px;
    font-weight: 500;
    position: absolute;
    bottom: 17px;
    right: 17px;
    cursor: pointer;
    transition: all .2s linear;
}

button{
    color: white !important;
    border-radius: 15px !important;
}

input[type="submit"]{
    color: white !important;
    border-radius: 15px !important;
}

.button:hover{
    transform: rotate(1deg) scale(1.1);
}

#viewAllProjects{
    background: var(--highlightGrad);
    border: none;
    border-radius: 25px;
    font-size: 17px;
    padding-block: 15px;
    padding-inline: 25px;
    font-weight: 500;
    cursor: pointer;
    font-weight: 600;
    transition: all .2s linear;
}

#viewAllProjects:hover{
    transform: rotate(1deg) scale(1.1);
}

@media screen and (max-width: 1000px) {
    .main-carousel{
        width: 90%;
    }
    .itemWrapper{
        width: 85%;
    }
    .bannerImg{
        border-top-right-radius: 20px;
        border-top-left-radius: 20px;
        height: 300px;
    }
    .itemText{
        height: 250px;
    }
    .itemText h1{
        margin-top: 15px;
    }
}

@media screen and (max-width: 600px) {
    .main-carousel{
        width: 100%;
    }
    .itemWrapper{
        width: 85%;
        filter: blur(1px) brightness(0.7);
    }
}

.itemText button{
    border-radius: 10px !important;
}

/* SKILLS SECTION */

.skills{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-block: 5vh;
    padding-bottom: 50px;
}

.skills h1 i{
    padding-inline: 7.5px;
    font-size: 25px;
}

.skills h1{
    font-size: 30px;
    font-weight: 200;
    margin: 0px;
    margin-bottom: 50px;
}

.skillsHolder{
    display: flex;
    flex-direction: row;
    border-bottom: none;
    padding: 20px;
    padding-bottom: 10px;
    gap: 20px;
}

.skillsHolder2{
    display: flex;
    flex-direction: row;
    border-top: none;
    padding: 20px;
    padding-top: 10px;
    gap: 20px;
}

.skillItem{
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--tamnoPlavaSeeThrough);
    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.4);
    border: 1px solid var(--tamnoPlavaBack);
    padding: 20px;
    padding-block: 30px;
    border-radius: 20px;
    padding-inline: 40px;
    transform-style: preserve-3d;
    transform: perspective(1000px);
    cursor: default;
}

.skillItem:hover{
    transform: translateY(-7.5px) scale(1.02);
    box-shadow: 0px 0px 50px rgba(0, 0, 0, 1);
}

@media screen and (max-width: 1000px) {
    .skillsHolder{
        flex-direction: column;
    }
    .skillsHolder2{
        flex-direction: column;
    }
}

.skillItem h1{
    font-size: 30px;
    font-weight: 400;
    margin: 0px;
    margin-bottom: 20px;
    transform: translateZ(60px);
}

.skillItem .skillTitle{
    width: 100%;
    margin: 5px;
    font-weight: 500;
    transform: translateZ(60px);
}

.skillItem .skillDesc{
    width: 100%;
    text-align: center;
    margin: 5px;
    margin-bottom: 10px;
    color: var(--descColor);
    transform: translateZ(60px);
}

.progressBarShell{
    width: 300px;
    height: 22.5px;
    border-radius: 40px;
    background-color: white;
    border: 2px solid white;
    overflow: hidden;
    transform: translateZ(60px);
}

@media screen and (max-width: 500px) {
    .progressBarShell{
        width: 270px;
    }
}
/* ... */

